[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenlang-registry"
version = "1.0.0"
description = "GreenLang Agent Registry - Centralized metadata repository for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GreenLang Team", email = "devops@greenlang.ai"}
]
keywords = [
    "greenlang",
    "agent",
    "registry",
    "ai",
    "sustainability",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "gunicorn>=22.0.0,<23.0.0",
    "python-multipart>=0.0.22",
    # Data Validation
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "email-validator>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.23,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.12.0,<2.0.0",
    "greenlet>=3.0.0",
    # HTTP Client
    "httpx>=0.28.1,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    # Utilities
    "python-dotenv>=1.2.1,<2.0.0",
    "structlog>=23.2.0,<24.0.0",
    # Monitoring
    "prometheus-client>=0.19.0,<1.0.0",
    # Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.1",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    # Code Quality
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "types-passlib>=1.7.7",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.1",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
]

[project.urls]
Homepage = "https://greenlang.ai"
Documentation = "https://docs.greenlang.ai/registry"
Repository = "https://github.com/greenlang/agent-registry"
Issues = "https://github.com/greenlang/agent-registry/issues"

[project.scripts]
greenlang-registry = "greenlang_registry.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["greenlang_registry*"]

[tool.setuptools.package-data]
greenlang_registry = ["py.typed", "*.json", "*.yaml"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=greenlang_registry",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-fail-under=85",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["greenlang_registry"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 85
show_missing = true
