# -*- coding: utf-8 -*-
# =============================================================================
# GL-005 CombustionControlAgent - Project Configuration
# =============================================================================
# Agent ID: GL-005
# Package: gl005-combustion-control
# Description: Real-time automated combustion control agent for consistent
#              heat output and stability with zero-hallucination deterministic control
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Project Metadata
# =============================================================================
[project]
name = "gl005-combustion-control"
version = "1.0.0"
description = "GreenLang GL-005 CombustionControlAgent - Real-time automated combustion control for consistent heat output and stability"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
authors = [
    { name = "GreenLang Team", email = "engineering@greenlang.ai" }
]
maintainers = [
    { name = "GreenLang Backend Team", email = "backend@greenlang.ai" }
]
keywords = [
    "greenlang",
    "combustion-control",
    "pid-control",
    "industrial-automation",
    "real-time-control",
    "emissions-monitoring",
    "dcs-integration",
    "plc-integration",
    "opc-ua",
    "modbus",
    "mqtt",
    "process-control",
    "zero-hallucination"
]

classifiers = [
    # Development Status
    "Development Status :: 5 - Production/Stable",

    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",

    # Topic
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: System :: Monitoring",

    # License
    "License :: Other/Proprietary License",

    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",

    # Operating System
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",

    # Environment
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",

    # Typing
    "Typing :: Typed",

    # Framework
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
]

# =============================================================================
# Dependencies
# =============================================================================
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Data Validation
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.1.0",

    # Monitoring & Observability
    "prometheus-client>=0.19.0",

    # Industrial Protocols
    "paho-mqtt>=2.0.0",
    "asyncua>=1.0.6",
    "pymodbus>=3.5.0",

    # Numerical Computing
    "numpy>=1.26.0",
    "scipy>=1.12.0",

    # Security
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",

    # Caching & State
    "redis>=5.0.0",

    # HTTP Client
    "aiohttp>=3.9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-json-logger>=2.0.7",
]

# =============================================================================
# Optional Dependencies
# =============================================================================
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",
    "faker>=22.0.0",
    "respx>=0.20.2",

    # Type Checking
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "types-PyJWT>=0.1.0",
    "types-aiofiles>=23.2.0",

    # Linting & Formatting
    "ruff>=0.2.0",
    "black>=24.1.0",

    # Pre-commit Hooks
    "pre-commit>=3.6.0",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",
    "faker>=22.0.0",
    "respx>=0.20.2",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

simulation = [
    "simpy>=4.1.1",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
]

# =============================================================================
# Entry Points
# =============================================================================
[project.scripts]
gl005 = "agents.main:app"

[project.entry-points."greenlang.agents"]
combustion-control = "agents:CombustionControlOrchestrator"

# =============================================================================
# Project URLs
# =============================================================================
[project.urls]
Homepage = "https://greenlang.ai"
Documentation = "https://docs.greenlang.ai/agents/gl-005"
Repository = "https://github.com/greenlang/gl-005-combustion-control"
Changelog = "https://github.com/greenlang/gl-005-combustion-control/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/greenlang/gl-005-combustion-control/issues"

# =============================================================================
# Setuptools Configuration
# =============================================================================
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "calculators*", "greenlang*", "integrations*"]
exclude = ["tests*", "docs*", "deployment*", "monitoring*", "runbooks*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.toml"]

[tool.setuptools.dynamic]
version = { attr = "agents.__version__" }

# =============================================================================
# Ruff Configuration - Fast Python Linter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "deployment",
    "runbooks",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "FLY",    # flynt
    "TRIO",   # flake8-trio
]

# Ignore specific rules
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "PLR0913", # Too many arguments to function call
    "S101",    # Use of assert detected (needed in tests)
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "TRY003",  # Avoid specifying long messages outside exception class
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can have more lenient rules
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG001",  # Unused function argument (fixtures)
    "ARG002",  # Unused method argument
    "ANN",     # Type annotations not required in tests
    "D",       # Docstrings not required in tests
    "PLR2004", # Magic value used in comparison
    "SLF001",  # Private member accessed
]
# Init files don't need all rules
"__init__.py" = ["F401", "F403", "D"]
# Config files
"**/config.py" = ["N802", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "calculators", "greenlang", "integrations"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 6
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# =============================================================================
# Black Configuration (Formatter)
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | deployment
    | runbooks
)/
'''

# =============================================================================
# MyPy Configuration - Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true

# Disallow dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling
implicit_optional = false
strict_optional = true

# Warnings
warn_no_return = true
warn_unreachable = true

# Error handling
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = true
namespace_packages = true
explicit_package_bases = true

# Plugins
plugins = ["pydantic.mypy"]

# Per-module configuration
[[tool.mypy.overrides]]
module = [
    "paho.*",
    "asyncua.*",
    "pymodbus.*",
    "simpy.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Asyncio mode
asyncio_mode = "auto"

# Markers
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow-running tests",
    "smoke: Smoke tests for basic functionality",
    "hardware: Tests requiring hardware (PLC, DCS)",
    "simulation: Simulation-based tests",
    "security: Security-related tests",
]

# Filtering and verbosity
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--color=yes",
]

# Timeouts
timeout = 300
timeout_method = "thread"

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Coverage
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["agents", "calculators", "greenlang", "integrations"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "*/conftest.py",
    "*/deployment/*",
    "*/runbooks/*",
]

[tool.coverage.paths]
source = ["agents", "calculators", "greenlang", "integrations"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*\\bProtocol\\):",
    "\\.\\.\\.",
]
show_missing = true
precision = 2
fail_under = 85

[tool.coverage.html]
directory = "htmlcov"
title = "GL-005 CombustionControlAgent Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Bandit Security Configuration
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "deployment", "runbooks", ".venv"]
skips = ["B101"]  # Skip assert_used check
targets = ["agents", "calculators", "greenlang", "integrations"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "conftest.py"]

# =============================================================================
# Hypothesis Configuration
# =============================================================================
[tool.hypothesis]
deadline = 500
max_examples = 100
verbosity = "normal"
phases = ["explicit", "reuse", "generate", "target", "shrink"]
stateful_step_count = 50
suppress_health_check = ["too_slow"]

# =============================================================================
# End of Configuration
# =============================================================================
